--- a/parent-jee/pom.xml
+++ b/parent-jee/pom.xml
@@ -5,9 +5,6 @@
 	<artifactId>parent-jee</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<modules>
-		<module>../jee-ejb</module>
-	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -53,4 +50,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<modules>
+		<module>../sample-ejb</module>
+	</modules>
 </project>
