--- a/sample-ejb/pom.xml
+++ b/sample-ejb/pom.xml
@@ -12,5 +12,10 @@
   		<artifactId>javaee-web-api</artifactId>
   		<version>6.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  	</dependency>
   </dependencies>
+  <packaging>ejb</packaging>
 </project>
