--- a/parent-jee/pom.xml
+++ b/parent-jee/pom.xml
@@ -54,6 +54,7 @@
 					<configuration>
 						<ejbVersion>3.1</ejbVersion>
 						<!-- <filterDeploymentDescriptor>true</filterDeploymentDescriptor> -->
+						<generateClient>true</generateClient>
 					</configuration>
 				</plugin>
 
@@ -146,7 +147,9 @@
 		</dependencies>
 	</dependencyManagement>
 	<modules>
+		<module>../sample</module>
 		<module>../sample-ejb</module>
 		<module>../sample-web</module>
+		<module>../sample-ejb-client</module>
 	</modules>
 </project>
