--- a/sample-web/pom.xml
+++ b/sample-web/pom.xml
@@ -21,7 +21,7 @@
 			<groupId>org.meb.play</groupId>
 			<artifactId>sample-ejb</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-			<type>ejb</type>
+			<type>ejb-client</type>
 		</dependency>
 		<dependency>
 			<groupId>javax</groupId>
@@ -39,6 +39,11 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>1.7.12</version>
 		</dependency>
 	</dependencies>
 
